--- a/1907-web/WebContent/css/my_css.css
+++ b/1907-web/WebContent/css/my_css.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 #info{	
-	border:1px solid #ff0000;
-	width:400px;
-	height:80px;
-	background-color:#ffdddd;
+  border:2px outset #7777ff;
+  padding:10px;
+  box-sizing:border-box;
+  border-left-width:30px;
+  box-shadow:3px 3px 6px #999;
 }
