--- a/1907-web/WebContent/nodejs/http/insert_result.ejs
+++ b/1907-web/WebContent/nodejs/http/insert_result.ejs
@@ -3,13 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>insert_result.html</title>
-<link rel='shortcut icon' href="#">
-<script src='./lib/jquery-3.4.1.js'></script>
-<script src='./lib/member.js'></script>
+<link rel='stylesheet' type='text/css' href='member.css'>
+<script src='jquery-3.4.1.js'></script>
+<script src='member.js'></script>
 </head>
 <body>
-<h3>회원가입됨</h3>
-<input type='button' value='목록', id='btnList'>
-<script>btnFunc()</script>
+<h3><%=msg%></h3>
+<form name='frm' id='frm' method='post'>
+	<input type='button' value='목록', id='btnList'>
+</form>
+<script>btnFunc();</script>
 </body>
 </html>
