--- a/1907-web/WebContent/nodejs/http/insert_form.ejs
+++ b/1907-web/WebContent/nodejs/http/insert_form.ejs
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>insert_form.html</title>
-<link rel='shortcut icon' href="#">
-<script src='./lib/jquery-3.4.1.js'></script>
-<script src='./lib/member.js'></script>
+<link rel='stylesheet' type='text/css' href='member.css'>
+<script src='jquery-3.4.1.js'></script>
+<script src='member.js'></script>
 </head>
 <body>
 	<div id='insert'>
@@ -27,11 +27,7 @@
 				<option value='3'>3 학년</option>
 				<option value='4'>4 학년</option>
 				<option value='5'>5 학년</option>
-				<option value='6'>6 학년</option>
-				<option value='7'>7 학년</option>
-				<option value='8'>8 학년</option>
-				<option value='9'>9 학년</option>
-				<option value='10'>10 학년</option>
+				<option value='6'>6 학년</option>				
 			</select>
 			<p/>
 			<label></label>
@@ -39,7 +35,7 @@
 			<input type='button' value='목록' id='btnList'/>
 		</form>	
 	</div>
-<script>insert();</script>
+<script>btnFunc()</script>
 	
 </body>
 </html>
