--- a/1907-web/WebContent/nodejs/http/view.ejs
+++ b/1907-web/WebContent/nodejs/http/view.ejs
@@ -2,33 +2,49 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>view.html</title>
-<link rel='shortcut icon' href="#">
-<script src='./lib/jquery-3.4.1.js'></script>
-<script src='./lib/member.js'></script>
+<title>view</title>
+<link rel='stylesheet' type='text/css' href='member.css'>
+<script src='jquery-3.4.1.js'></script>
+<script src='member.js'></script>
 </head>
 <body>
+<%
+	let d = data.rows[0];	
+%>
 	<div id='view'>
 		<h3>회원 정보 상세조회</h3>
 		<form name='frm' id='frm' method='post'>
 			<label>아이디</label>
-			<input type='text' name='mId' readonly/>
+			<input type='text' name='mId' value='<%=d[0]%>' />
 			<br/>
 			<label>성명</label>
-			<input type='text' name='mName' readonly/>
+			<input type='text' name='mName' value='<%=d[1]%>' />
 			<br/>
 			<label>등록일</label>
-			<input type='date' name='rDate' readonly/>
+			<input type='date' name='rDate' value='<%=d[2]%>' />
 			<br/>
 			<label>학년</label>
-			<input type='text' name='grade' readonly/>
+			<select name ='grade'>
+			<option value='1'>1 학년</option>
+			<option value='2'>2 학년</option>
+			<option value='3'>3 학년</option>
+			<option value='4'>4 학년</option>
+			<option value='5'>5 학년</option>			
+			<option value='6'>6 학년</option>
+			</select>
+			<br/>
 			<p/>
 			<label></label>
 			<input type='button' value='수정' id='btnModify'/>
 			<input type='button' value='삭제' id='btnDelete'/>
 			<input type='button' value='목록' id='btnList'/>
-		</form>	
+			<input type='hidden' name='findStr' value='<%=findStr%>'/>
+		</form>			
 	</div>
-<script>selectOne()</script>
+<script>
+//학년선택
+frm.grade.selectedIndex ='<%=d[3]-1%>';
+btnFunc();
+</script>
 </body>
 </html>
