--- a/1907-web/WebContent/nodejs/http/insert_form.ejs
+++ b/1907-web/WebContent/nodejs/http/insert_form.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>insert_form.html</title>
+<title>insert_form</title>
 <link rel='stylesheet' type='text/css' href='member.css'>
 <script src='jquery-3.4.1.js'></script>
 <script src='member.js'></script>
