--- a/1907-web/WebContent/nodejs/http/modify_form.ejs
+++ b/1907-web/WebContent/nodejs/http/modify_form.ejs
@@ -2,23 +2,27 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>modify_form.html</title>
-<link rel='shortcut icon' href="#">
-<script src='./lib/jquery-3.4.1.js'></script>
-<script src='./lib/member.js'></script>
+<title>modify_form</title>
+<link rel='stylesheet' type='text/css' href='member.css'>
+<script src='jquery-3.4.1.js'></script>
+<script src='member.js'></script>
 </head>
 <body>
+		<%
+			let d = data.rows[0];
+		%>
 	<div id='view'>
 		<h3>회원 정보 수정</h3>
+				
 		<form name='frm' id='frm' method='post'>
 			<label>아이디</label>
-			<input type='text' name='mId' readonly />
+			<input type='text' name='mId' value='<%=d[0]%>' />
 			<br/>
 			<label>성명</label>
-			<input type='text' name='mName' />
+			<input type='text' name='mName' value='<%=d[1]%>'/>
 			<br/>
 			<label>등록일</label>
-			<input type='date' name='rDate' />
+			<input type='date' name='rDate' value='<%=d[2]%>'/>
 			<br/>
 			<label>학년</label>
 			<select name='grade'>
@@ -27,20 +31,18 @@
 				<option value='3'>3 학년</option>
 				<option value='4'>4 학년</option>
 				<option value='5'>5 학년</option>
-				<option value='6'>6 학년</option>
-				<option value='7'>7 학년</option>
-				<option value='8'>8 학년</option>
-				<option value='9'>9 학년</option>
-				<option value='10'>10 학년</option>
+				<option value='6'>6 학년</option>				
 			</select>
 			<p/>
 			<label></label>
 			<input type='button' value='정보수정' id='btnUpdate'/>
 			<input type='button' value='목록' id='btnList'/>
+			<input type='hidden' name='findStr' value='<%=findStr%>' >
 		</form>	
 	</div>
 <script>
-modify();
+btnFunc();
+frm.grade.selectedIndex = '<%=d[3]-1%>';
 </script>
 </body>
 </html>
