--- a/1907-web/WebContent/nodejs/http/insert_form.ejs
+++ b/1907-web/WebContent/nodejs/http/insert_form.ejs
@@ -35,7 +35,7 @@
 			<input type='button' value='목록' id='btnList'/>
 		</form>	
 	</div>
-<script>btnFunc()</script>
+<script>insert()</script>
 	
 </body>
 </html>
