--- a/1907-web/WebContent/css/index.css
+++ b/1907-web/WebContent/css/index.css
@@ -5,6 +5,13 @@
 	margin:auto;
 	
 }
+#Login{
+	text-align: right;
+	margin-bottom: 3px;
+	background: '#fff';
+	font-size: 10px;	
+}
+
 #header{
 	overflow:visible;
 	background-image:url('../images/header_back.png');
