--- a/1907-web/WebContent/jsp_member/member.css
+++ b/1907-web/WebContent/jsp_member/member.css
@@ -15,7 +15,7 @@
 }
 
 #header {
-	background-image: url(../images/back2.png);
+	background-image: url(../images/header_back.png);
 	height: 150px;
 	margin-bottom: 1px;
 	color: #fff;
