--- a/1907-web/WebContent/css/mybatis.css
+++ b/1907-web/WebContent/css/mybatis.css
@@ -68,7 +68,9 @@
 #mybatis #page input:hover{
 	curser:pointer;
 }
-
+#mybatis .here{
+	background:#bbb;
+}
 
 /*-------------insert-----*/
 #mybatis #frm_input{	
